--- a/imgs/index.html
+++ b/imgs/index.html
@@ -34,6 +34,7 @@
 	├── <a href="./motion_models_comparison_gaussian_thrun.mp4">motion_models_comparison_gaussian_thrun.mp4</a><br>
 	├── <a href="./mrpt_reactivenav_ros_demo.gif">mrpt_reactivenav_ros_demo.gif</a><br>
 	├── <a href="./mrpt_reactivenav_ros_demo_s40.gif">mrpt_reactivenav_ros_demo_s40.gif</a><br>
+	├── <a href="./mrpt-skybox-demo.gif">mrpt-skybox-demo.gif</a><br>
 	├── <a href="./mrpt_slam_ros_pkg_demo_video.gif">mrpt_slam_ros_pkg_demo_video.gif</a><br>
 	├── <a href="./mrpt_slam_ros_pkg_demo_video_s90.gif">mrpt_slam_ros_pkg_demo_video_s90.gif</a><br>
 	├── <a href="./mrpt-videos-mix1.gif">mrpt-videos-mix1.gif</a><br>
