--- a/imgs/index.html
+++ b/imgs/index.html
@@ -38,7 +38,8 @@
 	├── <a href="./mrpt_slam_ros_pkg_demo_video.gif">mrpt_slam_ros_pkg_demo_video.gif</a><br>
 	├── <a href="./mrpt_slam_ros_pkg_demo_video_s90.gif">mrpt_slam_ros_pkg_demo_video_s90.gif</a><br>
 	├── <a href="./mrpt-videos-mix1.gif">mrpt-videos-mix1.gif</a><br>
-	└── <a href="./mrpt-videos-mix2.gif">mrpt-videos-mix2.gif</a><br>
+	├── <a href="./mrpt-videos-mix2.gif">mrpt-videos-mix2.gif</a><br>
+	└── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
