--- a/imgs/index.html
+++ b/imgs/index.html
@@ -39,7 +39,13 @@
 	├── <a href="./mrpt_slam_ros_pkg_demo_video_s90.gif">mrpt_slam_ros_pkg_demo_video_s90.gif</a><br>
 	├── <a href="./mrpt-videos-mix1.gif">mrpt-videos-mix1.gif</a><br>
 	├── <a href="./mrpt-videos-mix2.gif">mrpt-videos-mix2.gif</a><br>
-	└── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
+	├── <a href="./mvsim-agricobiot-chassis-collision.png">mvsim-agricobiot-chassis-collision.png</a><br>
+	├── <a href="./mvsim-agricobiot-chassis.png">mvsim-agricobiot-chassis.png</a><br>
+	├── <a href="./mvsim-greenhouse-collision-polygons.png">mvsim-greenhouse-collision-polygons.png</a><br>
+	├── <a href="./mvsim-plant-collision.png">mvsim-plant-collision.png</a><br>
+	├── <a href="./mvsim-plant.png">mvsim-plant.png</a><br>
+	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
+	└── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
