--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	├── <a href="./build-index.sh">build-index.sh</a><br>
 	├── <a href="./imgs/">imgs</a><br>
 	├── <a href="./index.html">index.html</a><br>
-	└── <a href="./README.md">README.md</a><br>
+	├── <a href="./README.md">README.md</a><br>
+	└── <a href="./videos/">videos</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
