--- a/imgs/index.html
+++ b/imgs/index.html
@@ -44,6 +44,7 @@
 	├── <a href="./mvsim-greenhouse-collision-polygons.png">mvsim-greenhouse-collision-polygons.png</a><br>
 	├── <a href="./mvsim-plant-collision.png">mvsim-plant-collision.png</a><br>
 	├── <a href="./mvsim-plant.png">mvsim-plant.png</a><br>
+	├── <a href="./ros-pf-localization-pioneer.jpg">ros-pf-localization-pioneer.jpg</a><br>
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
 	└── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
 	<hr>
