--- a/imgs/index.html
+++ b/imgs/index.html
@@ -39,11 +39,18 @@
 	├── <a href="./mrpt_slam_ros_pkg_demo_video_s90.gif">mrpt_slam_ros_pkg_demo_video_s90.gif</a><br>
 	├── <a href="./mrpt-videos-mix1.gif">mrpt-videos-mix1.gif</a><br>
 	├── <a href="./mrpt-videos-mix2.gif">mrpt-videos-mix2.gif</a><br>
+	├── <a href="./mvsim-2d-lidar.png">mvsim-2d-lidar.png</a><br>
 	├── <a href="./mvsim-agricobiot-chassis-collision.png">mvsim-agricobiot-chassis-collision.png</a><br>
 	├── <a href="./mvsim-agricobiot-chassis.png">mvsim-agricobiot-chassis.png</a><br>
 	├── <a href="./mvsim-greenhouse-collision-polygons.png">mvsim-greenhouse-collision-polygons.png</a><br>
+	├── <a href="./mvsim-lidar-helios32-26.png">mvsim-lidar-helios32-26.png</a><br>
+	├── <a href="./mvsim-lidar-helios32-31.png">mvsim-lidar-helios32-31.png</a><br>
+	├── <a href="./mvsim-lidar-helios32-70.png">mvsim-lidar-helios32-70.png</a><br>
+	├── <a href="./mvsim-lidar-ouster-os1.png">mvsim-lidar-ouster-os1.png</a><br>
+	├── <a href="./mvsim-lidar-velodyne-vlp16.png">mvsim-lidar-velodyne-vlp16.png</a><br>
 	├── <a href="./mvsim-plant-collision.png">mvsim-plant-collision.png</a><br>
 	├── <a href="./mvsim-plant.png">mvsim-plant.png</a><br>
+	├── <a href="./mvsim-rgbd-camera.png">mvsim-rgbd-camera.png</a><br>
 	├── <a href="./ros-pf-localization-pioneer.jpg">ros-pf-localization-pioneer.jpg</a><br>
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
 	└── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
