--- a/videos/index.html
+++ b/videos/index.html
@@ -28,10 +28,18 @@
 	<a href=".">.</a><br>
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./mvsim_demo_1robot.mp4">mvsim_demo_1robot.mp4</a><br>
+	├── <a href="./mvsim_demo_2robots.mp4">mvsim_demo_2robots.mp4</a><br>
+	├── <a href="./mvsim_demo_camera.mp4">mvsim_demo_camera.mp4</a><br>
+	├── <a href="./mvsim_demo_depth_camera.mp4">mvsim_demo_depth_camera.mp4</a><br>
+	├── <a href="./mvsim_demo_elevation_map.mp4">mvsim_demo_elevation_map.mp4</a><br>
+	├── <a href="./mvsim_demo_greenhouse.mp4">mvsim_demo_greenhouse.mp4</a><br>
+	├── <a href="./mvsim_demo_turtlebot_world.mp4">mvsim_demo_turtlebot_world.mp4</a><br>
+	├── <a href="./mvsim_demo_warehouse.mp4">mvsim_demo_warehouse.mp4</a><br>
 	├── <a href="./mvsim_nav2_turtlebot_demo.mp4">mvsim_nav2_turtlebot_demo.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_agricobiot_chassis.mp4">mvsim_polygon_example_agricobiot_chassis.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_plant.mp4">mvsim_polygon_example_plant.mp4</a><br>
-	└── <a href="./mvsim-warehouse-teleop-demo.mp4">mvsim-warehouse-teleop-demo.mp4</a><br>
+	├── <a href="./mvsim-warehouse-teleop-demo.mp4">mvsim-warehouse-teleop-demo.mp4</a><br>
+	└── <a href="./out/">out</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
