--- a/videos/index.html
+++ b/videos/index.html
@@ -39,7 +39,8 @@
 	├── <a href="./mvsim_polygon_example_agricobiot_chassis.mp4">mvsim_polygon_example_agricobiot_chassis.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_plant.mp4">mvsim_polygon_example_plant.mp4</a><br>
 	├── <a href="./mvsim-warehouse-teleop-demo.mp4">mvsim-warehouse-teleop-demo.mp4</a><br>
-	└── <a href="./out/">out</a><br>
+	├── <a href="./out/">out</a><br>
+	└── <a href="./pf_localization_demo_2dgrid_mvsim.mp4">pf_localization_demo_2dgrid_mvsim.mp4</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
