--- a/imgs/index.html
+++ b/imgs/index.html
@@ -29,6 +29,7 @@
 	├── <a href="./camera-calibration-checker-board_9x7.odp">camera-calibration-checker-board_9x7.odp</a><br>
 	├── <a href="./camera-calibration-checker-board_9x7.pdf">camera-calibration-checker-board_9x7.pdf</a><br>
 	├── <a href="./index.html">index.html</a><br>
+	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
 	├── <a href="./motion_model_mmGauss.mp4">motion_model_mmGauss.mp4</a><br>
 	├── <a href="./motion_model_mmThrun.mp4">motion_model_mmThrun.mp4</a><br>
 	├── <a href="./motion_models_comparison_gaussian_thrun.mp4">motion_models_comparison_gaussian_thrun.mp4</a><br>
