mp2p icp log demo

--- a/videos/index.html
+++ b/videos/index.html
@@ -27,6 +27,7 @@
 	<h1>Directory Tree</h1><p>
 	<a href=".">.</a><br>
 	├── <a href="./index.html">index.html</a><br>
+	├── <a href="./mp2p_icp-log-viewer-demo.mp4">mp2p_icp-log-viewer-demo.mp4</a><br>
 	├── <a href="./mvsim_demo_1robot.mp4">mvsim_demo_1robot.mp4</a><br>
 	├── <a href="./mvsim_demo_2robots.mp4">mvsim_demo_2robots.mp4</a><br>
 	├── <a href="./mvsim_demo_camera.mp4">mvsim_demo_camera.mp4</a><br>
