mola front page video

--- a/videos/index.html
+++ b/videos/index.html
@@ -28,6 +28,7 @@
 	<a href=".">.</a><br>
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./mola_lo_ncd_stairs.mp4">mola_lo_ncd_stairs.mp4</a><br>
+	├── <a href="./mola_main_page_video.mp4">mola_main_page_video.mp4</a><br>
 	├── <a href="./mp2p_icp-log-viewer-demo.mp4">mp2p_icp-log-viewer-demo.mp4</a><br>
 	├── <a href="./mvsim_demo_1robot.mp4">mvsim_demo_1robot.mp4</a><br>
 	├── <a href="./mvsim_demo_2robots.mp4">mvsim_demo_2robots.mp4</a><br>
