add more mola gifs

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -31,6 +31,8 @@
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./lidar2d-radish-demo.gif">lidar2d-radish-demo.gif</a><br>
 	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
+	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif</a><br>
+	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxelize.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxelize.gif</a><br>
 	├── <a href="./motion_model_mmGauss.mp4">motion_model_mmGauss.mp4</a><br>
 	├── <a href="./motion_model_mmThrun.mp4">motion_model_mmThrun.mp4</a><br>
 	├── <a href="./motion_models_comparison_gaussian_thrun.mp4">motion_models_comparison_gaussian_thrun.mp4</a><br>
