--- a/imgs/index.html
+++ b/imgs/index.html
@@ -29,6 +29,7 @@
 	├── <a href="./camera-calibration-checker-board_9x7.odp">camera-calibration-checker-board_9x7.odp</a><br>
 	├── <a href="./camera-calibration-checker-board_9x7.pdf">camera-calibration-checker-board_9x7.pdf</a><br>
 	├── <a href="./index.html">index.html</a><br>
+	├── <a href="./kaist01_georef_sample.png">kaist01_georef_sample.png</a><br>
 	├── <a href="./lidar2d-radish-demo.gif">lidar2d-radish-demo.gif</a><br>
 	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
 	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif</a><br>
