add new kitti demo gif

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -31,6 +31,7 @@
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./kaist01_georef_sample.png">kaist01_georef_sample.png</a><br>
 	├── <a href="./lidar2d-radish-demo.gif">lidar2d-radish-demo.gif</a><br>
+	├── <a href="./mola-slam-kitti-demo2.gif">mola-slam-kitti-demo2.gif</a><br>
 	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
 	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif</a><br>
 	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxelize.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxelize.gif</a><br>
