add rviz2 map server screenshot

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -61,7 +61,8 @@
 	├── <a href="./mvsim-rgbd-camera.png">mvsim-rgbd-camera.png</a><br>
 	├── <a href="./ros-pf-localization-pioneer.jpg">ros-pf-localization-pioneer.jpg</a><br>
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
-	└── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
+	├── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
+	└── <a href="./screenshot-rviz2-mrpt-map-server-demo-warehouse.png">screenshot-rviz2-mrpt-map-server-demo-warehouse.png</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
