--- a/imgs/index.html
+++ b/imgs/index.html
@@ -61,6 +61,7 @@
 	├── <a href="./mvsim-rgbd-camera.png">mvsim-rgbd-camera.png</a><br>
 	├── <a href="./ros-pf-localization-pioneer.jpg">ros-pf-localization-pioneer.jpg</a><br>
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
+	├── <a href="./screenshot_mola_demo_kitti_replay_to_ros.jpg">screenshot_mola_demo_kitti_replay_to_ros.jpg</a><br>
 	├── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
 	└── <a href="./screenshot-rviz2-mrpt-map-server-demo-warehouse.png">screenshot-rviz2-mrpt-map-server-demo-warehouse.png</a><br>
 	<hr>
