add georef diagram

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -33,6 +33,7 @@
 	├── <a href="./lidar2d-radish-demo.gif">lidar2d-radish-demo.gif</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-kitti.png">mola-lo-ros2-launch-demo-kitti.png</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-live-forest.png">mola-lo-ros2-launch-demo-live-forest.png</a><br>
+	├── <a href="./mola_mrpt_ros_geo_referenced_utm_frames.png">mola_mrpt_ros_geo_referenced_utm_frames.png</a><br>
 	├── <a href="./mola-slam-kitti-demo2.gif">mola-slam-kitti-demo2.gif</a><br>
 	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
 	├── <a href="./mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif">mola_tutorial_building_maps_warehouse_pointcloud_voxel_and_2d_grid.gif</a><br>
