Add new mvsim demo video

--- a/videos/index.html
+++ b/videos/index.html
@@ -38,6 +38,7 @@
 	├── <a href="./mvsim_demo_depth_camera.mp4">mvsim_demo_depth_camera.mp4</a><br>
 	├── <a href="./mvsim_demo_elevation_map.mp4">mvsim_demo_elevation_map.mp4</a><br>
 	├── <a href="./mvsim_demo_greenhouse.mp4">mvsim_demo_greenhouse.mp4</a><br>
+	├── <a href="./mvsim-demo-road-circuit1_world.mp4">mvsim-demo-road-circuit1_world.mp4</a><br>
 	├── <a href="./mvsim_demo_turtlebot_world.mp4">mvsim_demo_turtlebot_world.mp4</a><br>
 	├── <a href="./mvsim_demo_warehouse.mp4">mvsim_demo_warehouse.mp4</a><br>
 	├── <a href="./mvsim_nav2_turtlebot_demo.mp4">mvsim_nav2_turtlebot_demo.mp4</a><br>
