--- a/imgs/index.html
+++ b/imgs/index.html
@@ -60,6 +60,7 @@
 	├── <a href="./mvsim-plant-collision.png">mvsim-plant-collision.png</a><br>
 	├── <a href="./mvsim-plant.png">mvsim-plant.png</a><br>
 	├── <a href="./mvsim-rgbd-camera.png">mvsim-rgbd-camera.png</a><br>
+	├── <a href="./mvsim_roscon_video_front.jpg">mvsim_roscon_video_front.jpg</a><br>
 	├── <a href="./ros-pf-localization-pioneer.jpg">ros-pf-localization-pioneer.jpg</a><br>
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
 	├── <a href="./screenshot_mola_demo_kitti_replay_to_ros.jpg">screenshot_mola_demo_kitti_replay_to_ros.jpg</a><br>
