--- a/imgs/index.html
+++ b/imgs/index.html
@@ -31,6 +31,7 @@
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./kaist01_georef_sample.png">kaist01_georef_sample.png</a><br>
 	├── <a href="./lidar2d-radish-demo.gif">lidar2d-radish-demo.gif</a><br>
+	├── <a href="./mola-lo-relocalization-from-fox-glove.jpg">mola-lo-relocalization-from-fox-glove.jpg</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-kitti.png">mola-lo-ros2-launch-demo-kitti.png</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-live-forest.png">mola-lo-ros2-launch-demo-live-forest.png</a><br>
 	├── <a href="./mola_mrpt_ros_geo_referenced_utm_frames.png">mola_mrpt_ros_geo_referenced_utm_frames.png</a><br>
