add more frame figs

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -34,6 +34,8 @@
 	├── <a href="./mola-lo-relocalization-from-fox-glove.jpg">mola-lo-relocalization-from-fox-glove.jpg</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-kitti.png">mola-lo-ros2-launch-demo-kitti.png</a><br>
 	├── <a href="./mola-lo-ros2-launch-demo-live-forest.png">mola-lo-ros2-launch-demo-live-forest.png</a><br>
+	├── <a href="./mola_mrpt_ros_frames_fusion.png">mola_mrpt_ros_frames_fusion.png</a><br>
+	├── <a href="./mola_mrpt_ros_frames_no_rep105.png">mola_mrpt_ros_frames_no_rep105.png</a><br>
 	├── <a href="./mola_mrpt_ros_geo_referenced_utm_frames.png">mola_mrpt_ros_geo_referenced_utm_frames.png</a><br>
 	├── <a href="./mola-slam-kitti-demo2.gif">mola-slam-kitti-demo2.gif</a><br>
 	├── <a href="./mola-slam-kitti-demo.gif">mola-slam-kitti-demo.gif</a><br>
