add more mola-lo demo videos

--- a/videos/index.html
+++ b/videos/index.html
@@ -30,6 +30,7 @@
 	├── <a href="./mola_demos_Mulran_replay_to_ros2.mp4">mola_demos_Mulran_replay_to_ros2.mp4</a><br>
 	├── <a href="./mola-localization-pf-demo-warehouse.mp4">mola-localization-pf-demo-warehouse.mp4</a><br>
 	├── <a href="./mola-lo-gui-kitti_demo_00.mp4">mola-lo-gui-kitti_demo_00.mp4</a><br>
+	├── <a href="./mola-lo-mulran-dcc02-demo-decaying-clouds.mp4">mola-lo-mulran-dcc02-demo-decaying-clouds.mp4</a><br>
 	├── <a href="./mola_lo_ncd_stairs.mp4">mola_lo_ncd_stairs.mp4</a><br>
 	├── <a href="./mola_main_page_video.mp4">mola_main_page_video.mp4</a><br>
 	├── <a href="./mola-slam-mulran-demo-ndt.mp4">mola-slam-mulran-demo-ndt.mp4</a><br>
@@ -42,6 +43,7 @@
 	├── <a href="./mvsim_demo_greenhouse.mp4">mvsim_demo_greenhouse.mp4</a><br>
 	├── <a href="./mvsim-demo-road-circuit1_world.mp4">mvsim-demo-road-circuit1_world.mp4</a><br>
 	├── <a href="./mvsim_demo_turtlebot_world.mp4">mvsim_demo_turtlebot_world.mp4</a><br>
+	├── <a href="./mvsim_demo_warehouse.gif">mvsim_demo_warehouse.gif</a><br>
 	├── <a href="./mvsim_demo_warehouse.mp4">mvsim_demo_warehouse.mp4</a><br>
 	├── <a href="./mvsim_nav2_turtlebot_demo.mp4">mvsim_nav2_turtlebot_demo.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_agricobiot_chassis.mp4">mvsim_polygon_example_agricobiot_chassis.mp4</a><br>
