add sm2mm images

--- a/imgs/index.html
+++ b/imgs/index.html
@@ -69,7 +69,18 @@
 	├── <a href="./screenshot_hwdrivers_taobotics_imu.jpg">screenshot_hwdrivers_taobotics_imu.jpg</a><br>
 	├── <a href="./screenshot_mola_demo_kitti_replay_to_ros.jpg">screenshot_mola_demo_kitti_replay_to_ros.jpg</a><br>
 	├── <a href="./screenshot_pymrpt_example_opengl1.png">screenshot_pymrpt_example_opengl1.png</a><br>
-	└── <a href="./screenshot-rviz2-mrpt-map-server-demo-warehouse.png">screenshot-rviz2-mrpt-map-server-demo-warehouse.png</a><br>
+	├── <a href="./screenshot-rviz2-mrpt-map-server-demo-warehouse.png">screenshot-rviz2-mrpt-map-server-demo-warehouse.png</a><br>
+	├── <a href="./sm2mm_generic_diagram.png">sm2mm_generic_diagram.png</a><br>
+	├── <a href="./sm2mm_no_decim_imu_mls_keyframe_map.png">sm2mm_no_decim_imu_mls_keyframe_map.png</a><br>
+	├── <a href="./sm2mm_pointcloud_voxelize.png">sm2mm_pointcloud_voxelize.png</a><br>
+	├── <a href="./sm2mm_voxels_static_dynamic_points.png">sm2mm_voxels_static_dynamic_points.png</a><br>
+	├── <a href="./smm2_demo_dcc02_dyn_layer_dyn.png">smm2_demo_dcc02_dyn_layer_dyn.png</a><br>
+	├── <a href="./smm2_demo_dcc02_dyn_layer_static_overview.png">smm2_demo_dcc02_dyn_layer_static_overview.png</a><br>
+	├── <a href="./smm2_demo_dcc02_dyn_layer_static.png">smm2_demo_dcc02_dyn_layer_static.png</a><br>
+	├── <a href="./smm2_demo_dcc02_dyn_layer_voxel.png">smm2_demo_dcc02_dyn_layer_voxel.png</a><br>
+	├── <a href="./smm2_demo_dcc02_mls.png">smm2_demo_dcc02_mls.png</a><br>
+	├── <a href="./smm2_demo_dcc02_voxel_overview.png">smm2_demo_dcc02_voxel_overview.png</a><br>
+	└── <a href="./smm2_demo_dcc02_voxel.png">smm2_demo_dcc02_voxel.png</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
