add mvsim demo video

--- a/videos/index.html
+++ b/videos/index.html
@@ -41,6 +41,7 @@
 	├── <a href="./mvsim_demo_depth_camera.mp4">mvsim_demo_depth_camera.mp4</a><br>
 	├── <a href="./mvsim_demo_elevation_map.mp4">mvsim_demo_elevation_map.mp4</a><br>
 	├── <a href="./mvsim_demo_greenhouse.mp4">mvsim_demo_greenhouse.mp4</a><br>
+	├── <a href="./mvsim_demo_indoor_outdoor.mp4">mvsim_demo_indoor_outdoor.mp4</a><br>
 	├── <a href="./mvsim-demo-road-circuit1_world.mp4">mvsim-demo-road-circuit1_world.mp4</a><br>
 	├── <a href="./mvsim_demo_turtlebot_world.mp4">mvsim_demo_turtlebot_world.mp4</a><br>
 	├── <a href="./mvsim_demo_warehouse.gif">mvsim_demo_warehouse.gif</a><br>
