walls demo video

--- a/videos/index.html
+++ b/videos/index.html
@@ -44,6 +44,7 @@
 	├── <a href="./mvsim_demo_indoor_outdoor.mp4">mvsim_demo_indoor_outdoor.mp4</a><br>
 	├── <a href="./mvsim-demo-road-circuit1_world.mp4">mvsim-demo-road-circuit1_world.mp4</a><br>
 	├── <a href="./mvsim_demo_turtlebot_world.mp4">mvsim_demo_turtlebot_world.mp4</a><br>
+	├── <a href="./mvsim_demo_walls.mp4">mvsim_demo_walls.mp4</a><br>
 	├── <a href="./mvsim_demo_warehouse.gif">mvsim_demo_warehouse.gif</a><br>
 	├── <a href="./mvsim_demo_warehouse.mp4">mvsim_demo_warehouse.mp4</a><br>
 	├── <a href="./mvsim_nav2_turtlebot_demo.mp4">mvsim_nav2_turtlebot_demo.mp4</a><br>
