tractor video demo

--- a/videos/index.html
+++ b/videos/index.html
@@ -50,6 +50,7 @@
 	├── <a href="./mvsim_nav2_turtlebot_demo.mp4">mvsim_nav2_turtlebot_demo.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_agricobiot_chassis.mp4">mvsim_polygon_example_agricobiot_chassis.mp4</a><br>
 	├── <a href="./mvsim_polygon_example_plant.mp4">mvsim_polygon_example_plant.mp4</a><br>
+	├── <a href="./mvsim-tractor-trailer.mp4">mvsim-tractor-trailer.mp4</a><br>
 	├── <a href="./mvsim-warehouse-teleop-demo.mp4">mvsim-warehouse-teleop-demo.mp4</a><br>
 	├── <a href="./out/">out</a><br>
 	└── <a href="./pf_localization_demo_2dgrid_mvsim.mp4">pf_localization_demo_2dgrid_mvsim.mp4</a><br>
